--- a/Redux/01-rtk-todos/package.json
+++ b/Redux/01-rtk-todos/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "01-rtk-todo",
+  "name": "01-rtk-todos",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.4"
   }
 }
